Bug 353080 - kdirwatch crashes from git master
Summary: kdirwatch crashes from git master
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kcoreaddons
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Michael Pyne
URL:
Keywords: drkonqi
: 352900 353151 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-09-23 11:08 UTC by Harald Sitter
Modified: 2016-03-13 08:01 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2015-09-23 11:08:48 UTC
Application: dolphin (15.08.0)
 (Compiled from sources)
Qt Version: 5.4.1
Operating System: Linux 3.19.0-28-generic x86_64
Distribution: Ubuntu 15.04

-- Information about the crash:
- What I was doing when the application crashed:

closing any dolphin window causes a crash in kdirwatch accessing a nullptr Private

The crash can be reproduced every time.

-- Backtrace:
Application: Dolphin (dolphin), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[KCrash Handler]
#6  detach (this=<optimized out>) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qmap.h:364
#7  find (akey=..., this=<optimized out>) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qmap.h:840
#8  KDirWatchPrivate::entry (this=0x0, _path=...) at ../../../src/lib/io/kdirwatch.cpp:599
#9  0x00007fcd894f6152 in KDirWatch::contains (this=0x7fcd89751fc0 <(anonymous namespace)::Q_QGS_s_pKDirWatchSelf::innerFunction()::holder>, _path=...) at ../../../src/lib/io/kdirwatch.cpp:1991
#10 0x00007fcd87bcae04 in KSambaShare::~KSambaShare (this=0x7fcd87eced10 <(anonymous namespace)::Q_QGS__instance::innerFunction()::holder>, __in_chrg=<optimized out>) at ../../../src/core/ksambashare.cpp:447
#11 0x00007fcd87bcae49 in (anonymous namespace)::Q_QGS__instance::innerFunction()::Holder::~Holder() () at ../../../src/core/ksambashare.cpp:497
#12 0x00007fcd8a213d32 in __run_exit_handlers (status=0, listp=0x7fcd8a59e698 <__exit_funcs>, run_list_atexit=run_list_atexit@entry=true) at exit.c:82
#13 0x00007fcd8a213d85 in __GI_exit (status=<optimized out>) at exit.c:104
#14 0x00007fcd8a1faa47 in __libc_start_main (main=0x400740 <main>, argc=2, argv=0x7ffccf9fe388, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffccf9fe378) at libc-start.c:323
#15 0x0000000000400779 in _start ()

Possible duplicates by query: bug 214068.

Reported using DrKonqi
Comment 1 Harald Sitter 2015-09-23 11:14:28 UTC
Bisecting: 0 revisions left to test after this (roughly 0 steps)
[14833ae1cd13a0185147eebb46340af7f8c620e4] KDirWatch: fix thread safety

Also, it appears it actually only happens to dolphins started via konsole's context menu 'open here' feature. 100% reproducible via the context menu though.
Comment 2 David Faure 2015-09-24 07:13:16 UTC
Git commit 6b720c2ee7b9d4bc259011af8e8af8e9ca186c4c by David Faure.
Committed on 24/09/2015 at 07:12.
Pushed by dfaure into branch 'master'.

KDirWatch: fix crash when a global static destructor uses KDirWatch::self()
FIXED-IN: 5.15

M  +16   -0    autotests/kdirwatch_unittest.cpp
M  +1    -1    src/lib/io/kdirwatch.cpp

http://commits.kde.org/kcoreaddons/6b720c2ee7b9d4bc259011af8e8af8e9ca186c4c
Comment 3 Eugene Shalygin 2015-09-25 10:34:53 UTC
*** Bug 353151 has been marked as a duplicate of this bug. ***
Comment 4 Luca Beltrame 2016-03-13 08:01:36 UTC
*** Bug 352900 has been marked as a duplicate of this bug. ***