KDirWatch: fix crash when a global static destructor uses KDirWatch::self()

BUG: 353080
FIXED-IN: 5.15